Fixed pixel shifting issue from max width

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,6 +1,6 @@
 @import "base";
 
-.inex {margin: 15vh auto 100px; max-width: 700px; padding-left: 12px; padding-right: 12px;}
+.inex {margin: 15vh auto 100px; max-width: 720px; padding-left: 12px; padding-right: 12px;}
 .inex span {display: none;}
 .inex p {margin: 0; padding-bottom: 0px; padding-top: 0px;}
 .inex span.on {display: inline;}
